; ModuleID = '/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_utils.c_phpdbg_parse_variable_arg_wrapper.c'
source_filename = "/home/carl/AnghaBench/php-src/sapi/phpdbg/extr_phpdbg_utils.c_phpdbg_parse_variable_arg_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64, i8*, i64, i32*, i32*, i32 (i8*, i64, i8*, i64, i32*, i32*)*)* @phpdbg_parse_variable_arg_wrapper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @phpdbg_parse_variable_arg_wrapper(i8* %0, i64 %1, i8* %2, i64 %3, i32* %4, i32* %5, i32 (i8*, i64, i8*, i64, i32*, i32*)* %6) #0 {
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i8*, align 8
  %11 = alloca i64, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32 (i8*, i64, i8*, i64, i32*, i32*)*, align 8
  store i8* %0, i8** %8, align 8
  store i64 %1, i64* %9, align 8
  store i8* %2, i8** %10, align 8
  store i64 %3, i64* %11, align 8
  store i32* %4, i32** %12, align 8
  store i32* %5, i32** %13, align 8
  store i32 (i8*, i64, i8*, i64, i32*, i32*)* %6, i32 (i8*, i64, i8*, i64, i32*, i32*)** %14, align 8
  %15 = load i32 (i8*, i64, i8*, i64, i32*, i32*)*, i32 (i8*, i64, i8*, i64, i32*, i32*)** %14, align 8
  %16 = load i8*, i8** %8, align 8
  %17 = load i64, i64* %9, align 8
  %18 = load i8*, i8** %10, align 8
  %19 = load i64, i64* %11, align 8
  %20 = load i32*, i32** %12, align 8
  %21 = load i32*, i32** %13, align 8
  %22 = call i32 %15(i8* %16, i64 %17, i8* %18, i64 %19, i32* %20, i32* %21)
  ret i32 %22
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
